<resources>
    <string name="app_name">MiniGithub</string>
    <string name="action_search">Search</string>
    <string name="action_search_hint">Enter the text to search </string>
    <string name="no_content_message">No Content To Display. \n Enter keyword to search in the search bar above.</string>
    <string name="string_load_more">Load More</string>
    <string name="title_activity_repository_detail">RepositoryDetailActivity</string>
    <string name="string_language">Language</string>
    <string name="string_last_updated">Last Updated</string>
    <string name="string_watcher_count">Watchers</string>
    <string name="string_open_issue_count">Open Issues</string>
    <string name="string_reporter_header"><![CDATA[<-- Reported By]]> : \u0020</string>
    <string name="string_state">State : \u0020</string>
    <string name="string_created_date">Created date : \u0020</string>
    <string name="string_username">Username : \u0020</string>
    <string name="string_score">Score : \u0020</string>
</resources>
